--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -162,13 +162,13 @@
  SHARED_SECTOR_TRANSFER_RESOURCES_DESC:0 "§H$SECTOR_TRANSFER_RESOURCES$§!"
  SHARED_SECTOR_STOCKPILE_AMOUNT:0 "$AMOUNT|*0$"
  MONTHLY_SHARED_SECTOR_STOCKPILE_AMOUNT:0 "$AMOUNT|*0$ (+$MONTHLY|*0$) £plus£"
- SHARED_SECTOR_STOCKPILE_DESC:0 "§Hคลังเก็บที่ใช้ร่วมกัน§!\nจำนวนทรัพยากรที่กักตุนไว้สำหรับการใช้งานร่วมกันระหว่างเซกเตอร์\nคลังเก็บที่ใช้ร่วมกันจะถูกใช้หลังจากที่มีเซกเตอร์ที่โฟกัสไปที่การก่อสร้างบนดาวเคราะห์"
- LOCAL_SECTOR_STOCKPILE_DESC:0 "§H$LOCAL_SECTOR_STOCKPILE$§!\nจำนวนทรัพยากรที่เก็บในเซกเตอร์นี้\nคลังของเซกเตอร์จะถูกใช้โดยเซกเตอร์นี้เท่านั้น เพื่อใช้ในการก่อสร้างบนดาวเคราะห์แต่ละดวงในเซกเตอร์"
- sector:0 "เซกเตอร์"
- SHARED_SECTOR_RESOURCES:0 "ทรัพยากรของเซกเตอร์"
+ SHARED_SECTOR_STOCKPILE_DESC:0 "§Hคลังเก็บที่ใช้ร่วมกัน§!\nจำนวนทรัพยากรที่กักตุนไว้สำหรับการใช้งานร่วมกันระหว่างเซ็กเตอร์\nคลังเก็บที่ใช้ร่วมกันจะถูกใช้หลังจากที่มีเซ็กเตอร์ที่โฟกัสไปที่การก่อสร้างบนดาวเคราะห์"
+ LOCAL_SECTOR_STOCKPILE_DESC:0 "§H$LOCAL_SECTOR_STOCKPILE$§!\nจำนวนทรัพยากรที่เก็บในเซ็กเตอร์นี้\nคลังของเซ็กเตอร์จะถูกใช้โดยเซ็กเตอร์นี้เท่านั้น เพื่อใช้ในการก่อสร้างบนดาวเคราะห์แต่ละดวงในเซ็กเตอร์"
+ sector:0 "เซ็กเตอร์"
+ SHARED_SECTOR_RESOURCES:0 "ทรัพยากรของเซ็กเตอร์"
  SHARED_SECTOR_MONTHLY:0 "รายเดือน"
  SHARED_SECTOR_STOCKPILE:0 "คลังเก็บที่ใช้ร่วมกัน"
- LOCAL_SECTOR_STOCKPILE:0 "คลังของเซกเตอร์"
+ LOCAL_SECTOR_STOCKPILE:0 "คลังของเซ็กเตอร์"
  EMPIRE_RESOURCES_LABEL:0 "ทรัพยากรของจักรวรรดิ"
  SECTOR_RESOURCE_MONTHLY_TRANSFER:0 "Desired monthly transfer to shared resource stockpile"
  SECTOR_RESOURCE_TRANSFER_AMOUNT_LABEL:0 "+$AMOUNT|*0$"
