--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -628,13 +628,13 @@
  distar.320.desc:0 "$distar.311.desc.base$\n\nThe nanites have constructed some manner of advanced computational network on the surface of [From.From.From.GetName]. The network is inactive, and seemingly devoid of any AI, the nanites having deactivated the instant its construction was complete.\n\nOur researchers are somewhat baffled as to the purpose of the network. Studying it should keep them occupied for quite some time."
  enraged_army:0 "$NAME_Enraged_Colonists$"
  enraged_army_desc:0 "Afflicted with a mysterious condition, these colonists have turned hostile."
- building_cryonic_clones:0 "Cryonic Clones"
+ building_cryonic_clones:0 "ไครโอนิกโคลน"
  building_cryonic_clones_desc:0 "Hundreds of alien clones were left sealed in cryostasis chambers when this Ring World was still a ruin. Now fully restored, the clones have been preserved in this monument."
  building_the_zone:0 "โซน A"
  building_the_zone_desc:0 "A thirteen-by-thirteen kilometer stretch of land on this planet is a ruin of unknown origin, littered with many bizarre and unique alien artifacts. Bafflingly, it also produces sensations of deep contentment in its visitors."
  building_junkheap:0 "กองขยะ"
  building_junkheap_desc:0 "A rusting, irradiated jumble of collapsed infrastructure, destroyed buildings, and decaying wreckage from an unknown civilization."
- building_livestock_processing_center:0 "Processing Center"
+ building_livestock_processing_center:0 "ศูนย์แปรรูป"
  building_livestock_processing_center_desc:0 "The fungoids native to this planet were genetically engineered to be docile... and delicious. This processing center nourishes, then harvests them."
  exofungus_blocker:0 "£blocker£ Exofungus Growth"
  exofungus_blocker_desc:0 "The exofungus that has invaded this planet spreads like a cancer, choking the terrain and interfering with infrastructure."
@@ -1229,7 +1229,7 @@
  ENIGMATIC_UPLIFTING:0 "Enigmatic Ascension"
  ENIGMATIV_UPLIFTING_DESC:0 "The alien entity BALDOR XXXXIII claims that it can uplift our people using hypnopedia, sleep-learning. Our researchers will have to monitor the process closely."
  ENIGMATIC_UPLIFTING_DESC:0 "$ENIGMATIV_UPLIFTING_DESC$"
- ENIGMATIC_REPAIR:0 "Repairing BALDOR XXXXIII"
+ ENIGMATIC_REPAIR:0 "กำลังซ่อม BALDOR XXXXIII"
  ENIGMATIC_REPAIR_DESC:1 "Our ascension is being jeopardized by a critical hardware failure in Baldor XXXXIII. The entity requires immediate repairs."
  enigmatic_fatigue:0 "Fatigued"
  enigmatic_fatigue_desc:0 "Our pops are affected by hypnopedia-induced fatigue."
@@ -2058,7 +2058,7 @@
  ELDER_SPACE_WHALE_WEAPON:0 "$STRANGE_COMPONENTS_DESC$"
  ELDER_SPACE_WHALE_SPIKE:0 "$STRANGE_COMPONENTS_DESC$"
  amoeba_speed_boost:0 "Adopted Amoeba Speed"
- building_blocks:0 "Crucible of Life"
+ building_blocks:0 "เบ้าหลอมแห่งชีวิต"
  building_blocks_desc:0 "This planet is rife with gases and molecules believed to comprise crucial components and conditions for carbon- and ammonia-based lifeforms. Though no actual living organisms have been found on its surface, it may be a perfect crucible for the gradual emergence of biological life."
  elderly_tiyanki_dead_object:0 "Corpse of the $NAME_Elderly_Tiyanki$"
  tr_supremacy_fleet_logistical_corps_hive:0 "ยานบำรุงเลี้ยง"
