--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -2639,9 +2639,9 @@
  col_habitat_desc:1 "เป็นเป็นเมืองที่ถูกสร้างขึ้นเพื่อเป็นที่อยู่อาศัยในห้วงอวกาศ"
  col_fortress:0 "โลกป้อมปราการ"
  col_fortress_desc:1 "เป็นดาวที่เต็มไปด้วยด้วยการป้องกัน บังเกอร์และฐานที่มั่น สามารถป้องกันการรุกรานจากต่างดาวและความไม่สงบภายในได้"
- col_fe_colony:0 "อาณานิคมจักรวรรดิเก่าแก่ทรงพลัง"
+ col_fe_colony:0 "อาณานิคมจักรวรรดิฟอลเล็น"
  col_fe_colony_desc:1 "Though its empire may be in decline, the level of technological advancement on this world is astounding."
- col_fe_capital:0 "ศูนย์กลางจักรวรรดิเก่าแก่ทรงพลัง"
+ col_fe_capital:0 "ศูนย์กลางจักรวรรดิฟอลเล็น"
  col_fe_capital_desc:0 "$col_fe_colony_desc$"
  col_resort:0 "โลกรีสอร์ต"
  col_resort_desc:2 "A tranquil, weather-controlled resort world with beautiful nature that has not yet been scarred by large-scale development."
@@ -3846,17 +3846,17 @@
  CORP_INSULT_ACCEPT_05:0 "Ah, how lovely to hear from you! We just trademarked §Y[From.GetSpeciesNamePlural] Must Die§! for our new long-range ballistic missile."
  action.37.desc.corporate:0 "$CORP_PEACE_PROPOSE_02$"
  action.38.desc.corporate:0 "$CORP_PEACE_ACCEPT_01$"
- core_sector:0 "เซกเตอร์แกนกลาง"
- normal_sector:0 "เซกเตอร์"
+ core_sector:0 "เซ็กเตอร์แกนกลาง"
+ normal_sector:0 "เซ็กเตอร์"
  NO_DISTRICTS_ALLOWED:0 "§RNot possible to construct districts on this planet§!"
  EMPIRE_VIEW_DISTRICT_AMOUNT:0 "$CURRENT$/$MAX$"
  EMPIRE_VIEW_DISTRICT_AMOUNT_NO_CAP:0 "$CURRENT$"
  EMPIRE_VIEW_NUM_SYSTEMS:0 "ระบบดาว"
  EMPIRE_VIEW_NUM_COLONIES:0 "อาณานิคม"
  EMPIRE_VIEW_NUM_POPS:0 "ประชากร"
- EMPIRE_VIEW_SECTOR_CAPITAL:0 "เซกเตอร์ศูนย์กลาง"
- SECTOR_FOCUS_DISABLED:1 "§Hปิด§!\nการสร้างของเซกเตอร์แบบอัตโนมัติถูกปิดใช้งาน\n\nดาวเคราะห์ทั้งหมดในเซกเตอร์นี้ที่มี §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! เป็นของตัวเอง ถูกเปลี่ยนเป็น §Hปิด§!\n\nการตั้งค่าด้วยตนเองของ §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! เปิด/ปิด จะมีผลแทนที่ §Hระบบบริหารเซกเตอร์อัตโนมัติ§! (ยึดระบบบริหารดาวเป็นหลักโดยไม่สนใจระบบบริหารเซกเตอร์)"
- RENAME_SECTOR_TITLE:0 "เปลี่ยนชื่อเซกเตอร์"
+ EMPIRE_VIEW_SECTOR_CAPITAL:0 "เซ็กเตอร์ศูนย์กลาง"
+ SECTOR_FOCUS_DISABLED:1 "§Hปิด§!\nการสร้างของเซ็กเตอร์แบบอัตโนมัติถูกปิดใช้งาน\n\nดาวเคราะห์ทั้งหมดในเซ็กเตอร์นี้ที่มี §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! เป็นของตัวเอง ถูกเปลี่ยนเป็น §Hปิด§!\n\nการตั้งค่าด้วยตนเองของ §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! เปิด/ปิด จะมีผลแทนที่ §Hระบบบริหารเซ็กเตอร์อัตโนมัติ§! (ยึดระบบบริหารดาวเป็นหลักโดยไม่สนใจระบบบริหารเซ็กเตอร์)"
+ RENAME_SECTOR_TITLE:0 "เปลี่ยนชื่อเซ็กเตอร์"
  SECTOR_TRANSFER_RESOURCES:0 "ถ่ายโอนทรัพยากร"
  SECTOR_STOCKPILE:0 "คลังพัสดุ"
  SECTOR_STOCKPILE_LABEL:0 "$SECTOR_STOCKPILE$:"
@@ -3867,9 +3867,9 @@
  SECTOR_WRONG_OWNER:0 "Country is not owner of the sector"
  INVALID_NAME:0 "Invalid Name"
  OPEN_EMPIRE_VIEW_SECTOR:0 "§H$PLANET_LIST$§!\n§Gคลิกเพื่อเปิด§!"
- OL_TOGGLE_VISIBILITY_SECTORS_WITH_FOCUS:0 "แสดงเซกเตอร์ที่เปิดใช้งานโฟกัสอยู่"
+ OL_TOGGLE_VISIBILITY_SECTORS_WITH_FOCUS:0 "แสดงเซ็กเตอร์ที่เปิดใช้งานโฟกัสอยู่"
  OL_TOGGLE_VISIBILITY_SECTORS_WITH_FOCUS_DESC:0 "§HShow/Hide§!\nToggle if Sectors with active focus will be shown."
- OL_TOGGLE_VISIBILITY_SECTORS_NO_FOCUS:0 "แสดงเซกเตอร์ที่ไม่ได้เปิดใช้งานโฟกัสอยู่"
+ OL_TOGGLE_VISIBILITY_SECTORS_NO_FOCUS:0 "แสดงเซ็กเตอร์ที่ไม่ได้เปิดใช้งานโฟกัสอยู่"
  OL_TOGGLE_VISIBILITY_SECTORS_NO_FOCUS_DESC:0 "§HShow/Hide§!\nToggle if Sectors with no active focus will be shown."
  OL_TOGGLE_DESIGNATION_ICON:0 "แสดงไอคอนประเภทของอาณานิคม"
  OL_TOGGLE_DESIGNATION_ICON_DESC:0 "§Hประเภท/ชนิด§!\nสลับระหว่างการแสดง ประเภทของอาณานิคม หรือ ชนิดของดาวเคราะห์"
@@ -3880,7 +3880,7 @@
  OUTLINER_BRANCH_OFFICE_VALUE:0 "£energy£ $VALUE|1Y$"
  COUNTRY_STOCKPILE_AMOUNT:0 "£$RESOURCE_KEY$£ $AMOUNT|*0$"
  COUNTRY_STOCKPILE_DESC:0 "Amount of resources stockpiled in your Empire."
- SECTOR_AUTOMATION_DESC:0 "§Hระบบบริหารเซกเตอร์อัตโนมัติ§! \n\nการกำหนดโฟกัสของเซกเตอร์จะเป็นการเปิด §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! ของดาวเคราะห์ทั้งหมดที่อยู่ในเซกเตอร์นี้ \n\nดาวเคราะห์แต่ละดวงจะมีการพัฒนาโดยอัตโนมัติตาม §Hการกำหนด§! โดยเฉพาะ(ดาวแต่ละดวงอาจกำหนดไม่เหมือนกัน) \n\nหากดาวเคราะห์มี §Hการเลือกกำหนดเป็นอาณานิคมแบบอัตโนมัติ§! ดาวเคราะห์ดวงนั้นก็จะเลือกการกำหนดให้สอดคล้องกับโฟกัสของเซกเตอร์"
+ SECTOR_AUTOMATION_DESC:0 "§Hระบบบริหารเซ็กเตอร์อัตโนมัติ§! \n\nการกำหนดโฟกัสของเซ็กเตอร์จะเป็นการเปิด §Hระบบบริหารดาวเคราะห์อัตโนมัติ§! ของดาวเคราะห์ทั้งหมดที่อยู่ในเซ็กเตอร์นี้ \n\nดาวเคราะห์แต่ละดวงจะมีการพัฒนาโดยอัตโนมัติตาม §Hการกำหนด§! โดยเฉพาะ(ดาวแต่ละดวงอาจกำหนดไม่เหมือนกัน) \n\nหากดาวเคราะห์มี §Hการเลือกกำหนดเป็นอาณานิคมแบบอัตโนมัติ§! ดาวเคราะห์ดวงนั้นก็จะเลือกการกำหนดให้สอดคล้องกับโฟกัสของเซ็กเตอร์"
  SORT_BY_DISTRICTS:0 "§HSort by Districts§!"
  pop_factions:0 "กลุ่มการเมือง"
  subjects:0 "บริวาร"
@@ -3919,7 +3919,7 @@
  RESETTLE_HOUSING_LONG:0 "£housing£ ที่อยู่อาศัยที่มี: $HOUSING$"
  RESETTLE_CRIME:0 "£crime£ Crime: $CRIME$"
  CREATE_VASSAL_NOT_SECTOR_OWNER:0 "We do not control this sector."
- CREATE_VASSAL_CORE_SECTOR_INVALID:0 "ไม่สามารถสร้างบริวารจากเซกเตอร์แกนกลางได้"
+ CREATE_VASSAL_CORE_SECTOR_INVALID:0 "ไม่สามารถสร้างบริวารจากเซ็กเตอร์แกนกลางได้"
  CREATE_VASSAL_WE_ARE_SUBJECT:0 "การเป็น $SUBJECTTYPE$ เราไม่สามารถสร้างข้ารับใช้ได้"
  TOGGLE_NAVBAR_LOCK:0 "Press to toggle the navigation bar lock"
  NAVBAR_LOCKED:0 "แถบนำทางถูก §Yล็อก§!"
