--- a/mod/thmod/localisation/english/modifiers_2_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_2_l_english.yml
@@ -162,8 +162,8 @@
  mod_damage_vs_country_type_tiyanki_mult:0 "Damage to Tiyanki"
  mod_damage_vs_country_type_cloud_mult:0 "ทำความเสียหายกับ Void Clouds"
  mod_damage_vs_country_type_swarm_mult:1 "ทำความเสียหายกับ Prethoryn Creatures"
- mod_damage_vs_country_type_fallen_empire_mult:0 "ทำความเสียหายกับจักรวรรดิเก่าแก่ทรงพลัง"
- mod_damage_vs_country_type_awakened_fallen_empire_mult:0 "ทำความเสียหายกับ จักรวรรดิที่ได้ตื่นขึ้นแล้ว"
+ mod_damage_vs_country_type_fallen_empire_mult:0 "ทำความเสียหายกับจักรวรรดิเก่าแก่ทรงพลัง(ฟอลเล็นเอ็มไพร์)"
+ mod_damage_vs_country_type_awakened_fallen_empire_mult:0 "ทำความเสียหายกับจักรวรรดิฟอลเล็น(สถานะ:ตื่นขึ้น)"
  mod_damage_vs_country_type_extradimensional_mult:0 "ทำความเสียหายกับ Unbidden"
  mod_damage_vs_country_type_extradimensional_2_mult:0 "ทำความเสียหายกับ Aberrant"
  mod_damage_vs_country_type_extradimensional_3_mult:0 "ทำความเสียหายกับ Vehement"
