--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -40,8 +40,8 @@
  MOD_COUNTRY_RESEARCH_STATION_COST_MULT:0 "ค่าสถานีวิจัย"
  MOD_COUNTRY_SHIP_UPGRADE_COST_MULT:0 "ค่าใช้จ่ายในการอัปเกรดยาน"
  MOD_COUNTRY_LEADER_POOL_SIZE:0 "จำนวนผู้นำที่สามารถเลือกได้ (ตอนเลือกจ้าง)"
- MOD_COUNTRY_CORE_SECTOR_SYSTEM_CAP:0 "ระบบของเซกเตอร์แกนกลาง"
- MOD_COUNTRY_SECTOR_CAP_ADD:0 "ขีดจำกัดเซกเตอร์"
+ MOD_COUNTRY_CORE_SECTOR_SYSTEM_CAP:0 "ระบบของเซ็กเตอร์แกนกลาง"
+ MOD_COUNTRY_SECTOR_CAP_ADD:0 "ขีดจำกัดของเซ็กเตอร์"
  mod_country_base_energy_produces_mult:0 "การสร้างพลังงานของจักรวรรดิ"
  mod_country_base_minerals_produces_mult:0 "การผลิตแร่ของจักรวรรดิ"
  MOD_COUNTRY_NUM_TECH_ALTERNATIVES_ADD:0 "ทางเลือกในการวิจัย"
@@ -775,7 +775,7 @@
  hard_ai:0 "ความยากระดับยาก"
  very_hard_ai:0 "ความยากระดับยากมาก"
  inefficient_planet_management:0 "การจัดการดาวเคราะห์ที่ไม่มีประสิทธิภาพ"
- inefficient_sector_management:0 "การจัดการเซกเตอร์ที่ไม่มีประสิทธิภาพ"
+ inefficient_sector_management:0 "การจัดการเซ็กเตอร์ที่ไม่มีประสิทธิภาพ"
  ruler_ship:0 "ปรับปรุงยานที่สร้างขึ้นสำหรับผู้ปกครอง"
  ruler_station:0 "ปรับปรุงสถานีที่สร้างขึ้นสำหรับผู้ปกครอง"
  assist_research:0 "ความช่วยเหลือด้านการวิจัย"
@@ -789,8 +789,8 @@
  planet_separatist_strikes_desc:0 "Members of a Separatists faction are striking on this planet, reducing potential output."
  planet_separatist_supporter:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของดาวเคราะห์"
  planet_separatist_supporter_desc:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของดาวเคราะห์"
- sector_separatist_supporter:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของเซกเตอร์"
- sector_separatist_supporter_desc:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของเซกเตอร์"
+ sector_separatist_supporter:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของเซ็กเตอร์"
+ sector_separatist_supporter_desc:0 "ผู้สนับสนุนกลุ่มแบ่งแยกดินแดนของเซ็กเตอร์"
  sponsored_rebels:0 "กบฏที่ได้รับการสนับสนุน"
  recently_liberated:0 "เพิ่งได้รับการปลดปล่อย"
  swarm_strength:0 "ความแข็งแกร่งของฝูง"
@@ -1096,7 +1096,7 @@
  capital:0 "โลกศูนย์กลางจักรวรรดิ"
  capital_desc:0 "The Capital planet of an interstellar empire is a vast complex of government buildings, bureaus and agency headquarters."
  distance_from_capital:0 "ระยะทางจากศูนย์กลาง"
- managed_by_sector:0 "ถูกบริหารโดยเซกเตอร์"
+ managed_by_sector:0 "ถูกบริหารโดยเซ็กเตอร์"
  hazardous_weather:0 "สภาพอากาศที่เป็นอันตราย"
  hazardous_weather_desc:0 "This world suffers from unstable weather patterns, with violent storms frequently appearing out of nowhere to wreak havoc on the surface."
  dangerous_wildlife:1 "สัตว์ที่ไม่เป็นมิตร"
@@ -1452,8 +1452,8 @@
  MOD_DIPLO_ACTION_ACCEPTANCE_ADD:0 "Diplomatic Acceptance"
  mod_ships_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษายาน"
  mod_starbases_energy_upkeep_mult:0 "£energy£ พลังงานที่ใช้บำรุงรักษาฐานอวกาศ"
- MOD_CATAPULT_SPREAD_BASE:0 "Quantum Catapult Accuracy (Base)"
- MOD_CATAPULT_SPREAD_MULT:0 "Quantum Catapult Accuracy"
- MOD_CATAPULT_RANGE_BASE:0 "Quantum Catapult Range (Base)"
- MOD_CATAPULT_RANGE_MULT:0 "Quantum Catapult Range"
- mod_quantum_catapult_megastructure_bypass_windup_mult:0 "Quantum Catapult Windup"
+ MOD_CATAPULT_SPREAD_BASE:0 "เครื่องเหวี่ยงกองยานควอนตัม ความแม่นยำ (พื้นฐาน)"
+ MOD_CATAPULT_SPREAD_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ความแม่นยำ"
+ MOD_CATAPULT_RANGE_BASE:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ (พื้นฐาน)"
+ MOD_CATAPULT_RANGE_MULT:0 "เครื่องเหวี่ยงกองยานควอนตัม ระยะทำการ"
+ mod_quantum_catapult_megastructure_bypass_windup_mult:0 "เครื่องเหวี่ยงกองยานควอนตัม สิ้นสุด"
