--- a/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_utopia_l_english.yml
@@ -41,7 +41,7 @@
  slave_riots_desc:0 "Slave riots inhibit population growth."
  slave_hunger_strike:0 "Hunger Strike"
  slave_hunger_strike_desc:0 "It's hard to work when you're doubled over from hunger pangs."
- revolt_suppressed:0 "Slave Revolt Suppressed"
+ revolt_suppressed:0 "การก่อกบฏของทาสถูกปราบปราม"
  slaves_defected:0 "Free at Last"
  slaves_defected_desc:0 "The former slaves are pleased to be a part of our nation."
  revolt_suppressed_desc:0 "The slaves will not dare to reconsolidate anytime soon."
@@ -49,7 +49,7 @@
  free_at_last_desc:0 "The former slaves are finally free from their oppressors."
  insurgents_free:0 "$free_at_last$"
  insurgents_free_desc:0 "At last the rebels are free from the tyranny of the occupying power."
- revolt_suppressed_2:0 "Revolt Suppressed"
+ revolt_suppressed_2:0 "การก่อกบฏถูกปราบปราม"
  revolt_suppressed_2_desc:0 "The rebels will not dare to reconsolidate anytime soon."
  ageless:0 "Ageless"
  ageless_desc:0 "Aging less with Ageless..."
