--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -10,17 +10,17 @@
  spy_network_desc:2 "ส่งทูตไปสร้าง $spy_network$ และเพิ่ม §Hระดับการแทรกซึม§! ของคุณ\n\nเราไม่สามารถกำหนดใหม่ได้เป็นเวลา §Y£time£360§!"
  ENVOY_spy_network:1 "ยุ่งกับการสร้าง §H$spy_network$§! ใน $LOCATION|H$"
  ESPIONAGE_OPERATION_NOT_OWNER:1 "ไม่ได้เป็นเจ้าของ $spy_network$"
- ACTIVE_FILTER:0 "Active"
- BONUSES:0 "Bonuses"
+ ACTIVE_FILTER:0 "ยังทำงานอยู่"
+ BONUSES:0 "โบนัสต่างๆ"
  ASSET:0 "จารชน"
  ASSIGN_ASSET:0 "กำหนดจารชนให้กับปฏิบัติการ"
  PHASE_REPORT:0 "รายงานในแต่ละขั้นตอน"
  TARGET_INFO:0 "ข้อมูลของเป้าหมาย"
- SELECT_TARGET:0 "Select Target"
+ SELECT_TARGET:0 "เลือกเป้าหมาย"
  OPERATION_COST:0 "ค่าปฏิบัติการ"
  AUTO_LAUNCH:1 "เริ่มเมื่อพร้อม"
  UPKEEP:0 "ค่าบำรุงรักษา"
- TARGET:0 "Target"
+ TARGET:0 "เป้าหมาย"
  IF_SUCCESSFUL:0 "ถ้าสำเร็จ:"
  operative_plural_lower:0 "operatives"
  operative_drone_plural_lower:0 "operative drones"
@@ -47,7 +47,7 @@
  ESPIONAGE_OPERATION_PHASE_IN_PROGRESS:0 "ปฏิบัติการต่อเนื่อง"
  ESPIONAGE_OPERATION_FINISHED:0 "ปฏิบัติการเสร็จสิ้น"
  ESPIONAGE_OPERATION_LOCKED:0 "ปฏิบัติการถูกล็อก"
- ESPIONAGE_OPERATION_PHAZE_ZERO:0 "§HOperation Summary§!"
+ ESPIONAGE_OPERATION_PHAZE_ZERO:0 "§Hสรุปปฏิบัติการ§!"
  ESPIONAGE_OPERATION_PHAZE_ZERO_DELAYED:0 "§Gคลิกเพื่อดู§!"
  ESPIONAGE_OPERATION_PHAZE_TITLE:0 "ขั้นที่ $PHASE$"
  ESPIONAGE_OPERATION_SETUP_TITLE:0 "เริ่มปฏิบัติการ"
@@ -57,7 +57,7 @@
  ESPIONAGE_OPERATION_DIFFICULTY_TYPE_TOOLTIP:0 "§H$ESPIONAGE_OPERATION_DIFFICULTY_TYPE$§!\n$VALUE$\n\n$ESPIONAGE_OPERATION_DIFFICULTY_TYPE_DESC$"
  ESPIONAGE_OPERATION_DIFFICULTY_TYPE_DETAILS:0 "Currently affecting the difficulty:\n	$VALUE$"
  ESPIONAGE_OPERATION_ASSET_DIFFICULTY_EFFECT:0 "The Spy Network has Assets available that could lower this to $VALUE$ difficulty."
- ESPIONAGE_OPERATION_PHASE_REPORT:0 "Operation Log"
+ ESPIONAGE_OPERATION_PHASE_REPORT:0 "บันทึกปฏิบัติการ"
  ESPIONAGE_OPERATION_PHASE_REPORT_TOOLTIP:0 "§H$ESPIONAGE_OPERATION_PHASE_REPORT$§!\nThe $ESPIONAGE_OPERATION_PHASE_REPORT$ shows you the results of the last Operation Phase."
  ESPIONAGE_OPERATION_TARGET_INFORMATION:0 "§H$TARGET_INFO$§!\nThe $TARGET_INFO$ shows you important information about the empire you are targeting, like their §YRelative Power§! and §YRelative Encryption§!."
  ESPIONAGE_OPERATION_SKILL_BONUS:0 "โบนัสสกิล"
@@ -74,7 +74,7 @@
  ESPIONAGE_OPERATION_MODIFIERS_COLON:0 "$ESPIONAGE_OPERATION_MODIFIERS$:"
  FILTERS_SHOW_ALL:1 "แสดงทุกปฏิบัติการ"
  FILTER_TOGGLE:1 "สลับปฏิบัติการ $NAME|Y$"
- CREATE:0 "Create"
+ CREATE:0 "สร้าง"
  LAUNCH:0 "เริ่มดำเนินการ"
  ABORT:0 "ยกเลิก"
  RELATIVE_ENCRYPTION_DECRYPTION_TITLE:0 "การเข้ารหัสของฝ่ายตรงข้าม"
@@ -182,7 +182,7 @@
  MOD_SPY_POWER_COST_MULT:0 "$MOD_SPY_POWER_COST_ADD$"
  MOD_COUNTRY_COUNTER_ESPIONAGE_ADD:0 "Counter Espionage"
  MOD_COUNTRY_COUNTER_ESPIONAGE_MULT:0 "$MOD_COUNTRY_COUNTER_ESPIONAGE_ADD$"
- starbase_constructions:0 "Starbase Constructions"
+ starbase_constructions:0 "สิ่งปลูกสร้างในฐานอวกาศ"
  starbase_constructions_research_produces:0 "การวิจัยจากสิ่งปลูกสร้างในฐานอวกาศ"
  mod_starbase_constructions_physics_research_produces_mult:0 "£physics£ การวิจัยทางฟิสิกส์จากสิ่งปลูกสร้างในฐานอวกาศ"
  mod_starbase_constructions_society_research_produces_mult:0 "£society£ การวิจัยสังคมจากสิ่งปลูกสร้างในฐานอวกาศ"
