--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -830,7 +830,7 @@
  repulsive_aliens_uncondemned_desc:0 "Our failure to express opposition to the worrying new threat we have encountered has sparked opposition among our populace."
  first_contact_challenge_not_returned:0 "Challenge Not Returned"
  first_contact_challenge_not_returned_desc:0 "Our steadfast dedication to handling first contact in a rational and scientific manner is a major boon to our exploration department, although some worry that we may be putting ourselves at risk by not pre-empting conflict with apparently hostile civilizations."
- first_contact_war_preparations:0 "War Preparations"
+ first_contact_war_preparations:0 "เตรียมทำสงคราม"
  first_contact_war_preparations_desc:0 "Our encounter with an apparently hostile civilization has sparked widespread preparations for war."
  first_contact_warlike_warriors_recognised:0 "Warlike Prowess Recognized"
  first_contact_warlike_warriors_recognised_desc:0 "A civilization we recently encountered was so impressed by our prowess as warriors that they declared us to be among the finest fighters of the galaxy. This has done our reputation no harm whatsoever."
