--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -589,7 +589,7 @@
  ap_engineered_evolution_desc:0 "การปล่อยให้ชะตากรรมทางพันธุกรรมของเราอยู่ในเงื้อมมือของธรรมชาตินั้นเป็นกระบวนการที่ไม่มีประสิทธิภาพและช้าอย่างมาก ทำไมไม่เริ่มต้นอนาคตของสายพันธุ์ใหม่ของเรา?"
  ap_evolutionary_mastery_desc:1 "วิวัฒนาการตามธรรมชาติถูกสร้างขึ้นโดยเครื่องมือหยาบเพียงชิ้นเดียวนั่นคือความล้มเหลว ตอนนี้เราอาจกำหนดความสำเร็จนั้นได้"
  ap_the_flesh_is_weak_desc:0 "ข้อจำกัดของร่างกายสิ่งมีชีวิตที่อ่อนแอของเราเป็นสิ่งที่ยอมรับไม่ได้ เพื่อให้บรรลุศักยภาพสูงสุดเราต้องหันไปใช้การปลูกถ่ายระบบควบคุมระบบประสาท"
- ap_synthetic_evolution_desc:0 "ถึงเวลาแล้วที่จะละทิ้งภาชนะอินทรีย์ที่มีข้อบกพร่องซึ่งกักขังจิตใจของเราเอาไว้ โดยการถ่ายโอนข้อมูลรูปแบบเครือข่ายประสาทเทียมไปยังร่างกายสังเคราะห์ เราจะบรรลุสถานะที่สูงขึ้น"
+ ap_synthetic_evolution_desc:0 "ถึงเวลาแล้วที่จะละทิ้งภาชนะอินทรีย์ที่มีข้อบกพร่องซึ่งกักขังจิตของเราเอาไว้ โดยการถ่ายโอนข้อมูลรูปแบบเครือข่ายประสาทเทียมไปยังร่างกายสังเคราะห์ เราจะบรรลุสถานะที่สูงขึ้น"
  ap_mind_over_matter_desc:0 "เพียงเศษเสี้ยวของศักยภาพที่มีอยู่ในจิตใจของเราเท่านั้นได้ถูกปลดล็อกแล้ว ความสามารถในการพลังจิตแฝงของเผ่าพันธุ์เรากำลังเริ่มปรากฏให้เห็นแล้วในบางคน"
  ap_transcendence_desc:0 "เรากำลังยืนอยู่ที่ประตูสู่การตื่นขึ้นของพลังจิต พลังที่แท้จริงของเผ่าพันธุ์เรา จิตของเราพร้อมแล้วและเราได้ยินเสียงกระซิบของอาณาจักรพลังจิตที่อยู่เหนือกว่าเรา..."
  ap_synthetic_age:0 "ยุคจักรกลสังเคราะห์"
