--- a/mod/thmod/localisation/english/tutorial_overview_l_english.yml
+++ b/mod/thmod/localisation/english/tutorial_overview_l_english.yml
@@ -94,7 +94,7 @@
  HELP_TUTORIAL_GALACTIC_COMMUNITY_DESC:1 "£empire£ §SEmpires§! that have met a majority of all other spacefaring civilizations will be invited to join the Galactic Community. Being a member allows them to vote on new laws in the senate. Laws that are passed will be enforced for all other members."
  HELP_TUTORIAL_GALACTIC_COMMUNITY_INSTRUCTIONS:0 "So this is how liberty dies...\n...with thunderous applause."
  HELP_TUTORIAL_GALACTIC_COMMUNITY_ACTION:0 ""
- HELP_TUTORIAL_FALLEN_EMPIRES_TITLE:0 "Fallen Empires"
+ HELP_TUTORIAL_FALLEN_EMPIRES_TITLE:0 "จักรวรรดิฟอลเล็น"
  HELP_TUTORIAL_FALLEN_EMPIRES_DESC:0 "Fallen Empires are the stagnant remnants of the galactic powers of old. Though mere shadows of what they once were, they still possess incredibly advanced technology. Galactic affairs are of little interest to them, and they rarely venture beyond their own space."
  HELP_TUTORIAL_TRADITIONS_TITLE:0 "Adopting Traditions"
  HELP_TUTORIAL_TRADITIONS_DESC:0 "§STraditions§! are adopted using £unity£ §HUnity§! and allows an Empire to specialize in a given direction, such as military and rapid expansion, or diplomacy and creating federations. \n\nCompleting a §STradition Tree§! allows the £empire£ §SEmpire§! to pick an §SAscension Perk§! to further enhance itself."
