--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -16,16 +16,16 @@
  CAN_CREATE_ORBITAL_STATION_ALREADY_EXISTS_ORBITAL_DEFENCE:1 "An orbital defense station is already orbiting this $CLASS$"
  CANNOT_BOMBARD_ORBITAL_DEFENCE_PROTECTED:0 "Cannot bombard a planet that is protected by an orbital defence station"
  requires_not_hostile_or_primitive:0 "$TRIGGER_FAIL$Cannot build around hostile or primitive planets."
- tech_quantum_catapult:0 "Quantum Catapult"
- tech_quantum_catapult_desc:1 "A §YQuantum Catapult§! harnesses the power of a Neutron Star or Pulsar to twist the fabric of space, skipping a fleet across great distances."
+ tech_quantum_catapult:0 "เครื่องเหวี่ยงกองยานควอนตัม"
+ tech_quantum_catapult_desc:1 "§Yเครื่องเหวี่ยงกองยานควอนตัม§! ควบคุมพลังของดาวนิวตรอนหรือพัลซาร์เพื่อบิดโครงสร้างอวกาศ(กาลอวกาศยืด-หด) ทำให้สามารถส่งกองยานในระยะทางที่ไกลได้"
  requires_neutron_star_or_pulsar:0 "$TRIGGER_FAIL$Must be built around a $pc_neutron_star$ or $pc_pulsar$."
- requires_no_existing_quantum_catapult:0 "$TRIGGER_FAIL$Cannot build more than one Quantum Catapult."
- requires_no_existing_quantum_catapul_two:0 "$TRIGGER_FAIL$Cannot build more than two Quantum Catapults."
+ requires_no_existing_quantum_catapult:0 "$TRIGGER_FAIL$ไม่สามารถสร้างเครื่องเหวี่ยงกองยานควอนตัมได้มากกว่าหนึ่งเครื่อง"
+ requires_no_existing_quantum_catapul_two:0 "$TRIGGER_FAIL$ไม่สามารถสร้างเครื่องเหวี่ยงกองยานควอนตัมได้มากกว่าสองเครื่อง"
  quantum_catapult_0_MEGASTRUCTURE_DETAILS:1 "A device that focuses the forces of a Neutron Star or Pulsar in order to twist space and skip a fleet across great distances."
  quantum_catapult_0_CONSTRUCTION_INFO_DELAYED:1 "Early iterations of the Quantum Catapult may cause fleets to arrive in systems §Houtside§! their intended destination. This '§Yscatter radius§!' can be reduced with subsequent upgrades."
  quantum_catapult_0:0 "$quantum_catapult_1$ Site"
  quantum_catapult_0_DESC:1 "This compact supply depot gathers all the materials and personnel necessary to construct the first batch of vast focusing lenses for the Quantum Catapult."
- quantum_catapult_1:0 "Quantum Catapult"
+ quantum_catapult_1:0 "เครื่องเหวี่ยงกองยานควอนตัม"
  quantum_catapult_1_DESC:1 "Calculations have shown that even a scant few torsion lenses, installed at precise locations around their star, can channel enough energy to enable semi-volatile trajectories across interstellar space."
  quantum_catapult_2:0 "$quantum_catapult_1$"
  quantum_catapult_2_DESC:1 "Twin arrays of torsion lenses are placed diametrically opposite each other in order to improve the channeling of stellar flux as a means of transportation."
@@ -36,7 +36,7 @@
  quantum_catapult_ruined_MEGASTRUCTURE_DETAILS:1 ""
  quantum_catapult_restored:0 "$quantum_catapult_1$"
  quantum_catapult_restored_DESC:1 "$quantum_catapult_3_DESC$"
- quantum_catapult_BYPASS:0 "Quantum Catapult"
+ quantum_catapult_BYPASS:0 "เครื่องเหวี่ยงกองยานควอนตัม"
  quantum_catapult_BYPASS_DESC:1 "ระบบนี้มี §Y$quantum_catapult_1$§!"
  FLEETORDER_QUANTUM_CATAPULT_HEADER:0 "Catapult Fleet"
  FLEETORDER_QUANTUM_CATAPULT_DESC:0 "Launch a fleet from a system with a §YQuantum Catapult§!."
@@ -59,19 +59,19 @@
  quantum_catapult_restored_slingshot_DESC:1 "$quantum_catapult_2_DESC$"
  quantum_catapult_improved_slingshot:0 "Improved $quantum_catapult_1$"
  quantum_catapult_improved_slingshot_DESC:1 "$quantum_catapult_2_DESC$"
- hyper_relay:0 "Hyper Relay"
- hyper_relay_plural:0 "Hyper Relays"
+ hyper_relay:0 "ไฮเปอร์รีเลย์"
+ hyper_relay_plural:0 "ไฮเปอร์รีเลย์"
  hyper_relay_DESC:1 "Though useless on its own, a chain of Hyper Relays allows fast travel between adjacent systems."
  hyper_relay_MEGASTRUCTURE_DETAILS:1 "Though useless on its own, a §Ychain of Hyper Relays§! allows significantly faster transit times between adjacent systems."
- hyper_relay_ruined:0 "Hyper Relay (พังเสียหาย)"
+ hyper_relay_ruined:0 "ไฮเปอร์รีเลย์ (พังเสียหาย)"
  hyper_relay_ruined_DESC:0 "This ruined structure was once part of a chain of Hyper Relays allowing fast travel along its route."
  hyper_relay_ruined_MEGASTRUCTURE_DETAILS:0 "$hyper_relay_MEGASTRUCTURE_DETAILS$"
  hyper_relay_restored:0 "$hyper_relay$"
  hyper_relay_restored_DESC:0 "$hyper_relay_DESC$"
- tech_hyper_relays:0 "Hyper Relays"
- tech_hyper_relays_desc:0 "§YHyper Relays§! form a chain of structures built outside the gravity well of systems, allowing fast travel from relay to relay rather than requiring transit to established hyperlane entrances."
- feature_hyper_relay_construction:0 "การก่อสร้าง Hyper Relay"
- feature_hyper_relay_construction_desc:0 "Constructs a §YHyper Relay§! outside of the gravity well of a system. $hyper_relay_DESC$"
+ tech_hyper_relays:0 "เครื่องส่งยานความเร็วสูง"
+ tech_hyper_relays_desc:0 "§Yไฮเปอร์รีเลย์§! สร้างห่วงโซ่ของโครงสร้างที่สร้างขึ้นนอกแรงดึงดูดของระบบดาว ทำให้สามารถเดินทางจากรีเลย์หนึ่งไปยังอีกรีเลย์ได้อย่างรวดเร็วแทนที่จะต้องใช้ไฮเปอร์เลนแบบปกติ"
+ feature_hyper_relay_construction:0 "การก่อสร้างไฮเปอร์รีเลย์"
+ feature_hyper_relay_construction_desc:0 "สร้าง §Yไฮเปอร์รีเลย์§! นอกแรงดึงดูดของระบบดาว $hyper_relay_DESC$"
  requires_no_existing_hyper_relay:0 "$TRIGGER_FAIL$Cannot build due to existing $hyper_relay$."
  requires_colonized_planet_orbital_ring:0 "$TRIGGER_FAIL$Cannot build in orbit of planets that are neither colonized nor fully under your control."
  orbital_ring:0 "สถานีอวกาศวงแหวนโคจร"
@@ -187,7 +187,7 @@
  edict_relay_network_amenities_gestalt:0 "$edict_relay_network_amenities$"
  edict_relay_network_amenities_gestalt_desc:0 "Connecting the Relay Network to our logistics and supply chains improves the efficiency of maintenance operations."
  relay_network_amenities_gestalt_edict_modifier:0 "$edict_relay_network_amenities$"
- RELAY_NETWORK_EFFECTS:0 "§YHyper Relay Network Effects:§!"
+ RELAY_NETWORK_EFFECTS:0 "§Yเอฟเฟกต์เครือข่ายไฮเปอร์รีเลย์:§!"
  megastructures_hyper_relay:0 "$hyper_relay_plural$"
  mod_megastructures_hyper_relay_volatile_motes_upkeep_add:1 "£volatile_motes£ $volatile_motes$ Upkeep of $hyper_relay_plural$"
  mod_megastructures_hyper_relay_exotic_gases_upkeep_add:0 "£exotic_gases£ $exotic_gases$ Upkeep of $hyper_relay_plural$"
